--- a/index.html
+++ b/index.html
@@ -21,204 +21,348 @@
 	</head>
 	<body>
 		<header class="header">
-			<div class="container header-block">
-				<nav class="header-list">
-					<a class="logo" href="./index.html"
-						>Web<span class="logo-part">Studio</span></a
-					>
-					<ul class="navigation">
-						<li><a class="header-link" href="./index.html">Studio</a></li>
-						<li><a class="header-link" href="">Portfolio</a></li>
-						<li><a class="header-link" href="">Contacts</a></li>
-					</ul>
-				</nav>
-				<address class="header-contacts">
-					<ul class="address">
-						<li>
-							<a class="header-link" href="mailto:info@devstudio.com"
-								>info@devstudio.com</a
-							>
-						</li>
-						<li>
-							<a class="header-link" href="tel:+110001111111"
-								>+11 (000) 111-11-11</a
-							>
-						</li>
-					</ul>
-				</address>
-			</div>
+			<nav class="header-list">
+				<a class="logo" href="./index.html"
+					>Web<span class="logo-part">Studio</span></a
+				>
+				<ul>
+					<li><a class="header-link active" href="./index.html">Studio</a></li>
+					<li><a class="header-link" href="">Portfolio</a></li>
+					<li><a class="header-link" href="">Contacts</a></li>
+				</ul>
+			</nav>
+			<address class="header-contacts">
+				<ul>
+					<li>
+						<a class="header-link" href="mailto:info@devstudio.com"
+							>info@devstudio.com</a
+						>
+					</li>
+					<li>
+						<a class="header-link" href="tel:+110001111111"
+							>+11 (000) 111-11-11</a
+						>
+					</li>
+				</ul>
+			</address>
 		</header>
 		<main class="wrapper">
 			<section class="section solutions">
-				<div class="container">
-					<h1 class="solutions-title">Effective Solutions for Your Business</h1>
-					<button type="button" class="btn">Order Service</button>
-				</div>
+				<h1 class="solutions-title">Effective Solutions for Your Business</h1>
+				<button type="button" class="btn">Order Service</button>
 			</section>
 			<section class="section skills">
-				<div class="container">
-					<h2 class="visually-hidden">Skills</h2>
-					<ul class="skills-items">
-						<li class="skills-item">
-							<h3 class="section-name">Strategy</h3>
-							<p class="section-text">
-								Our goal is to identify the business problem to walk away with
-								the perfect and creative solution.
-							</p>
-						</li>
-						<li class="skills-item">
-							<h3 class="section-name">Punctuality</h3>
-							<p class="section-text">
-								Bring the key message to the brand's audience for the best price
-								within the shortest possible time.
-							</p>
-						</li>
-						<li class="skills-item">
-							<h3 class="section-name">Diligence</h3>
-							<p class="section-text">
-								Research and confirm brands that present the strongest digital
-								growth opportunities and minimize risk.
-							</p>
-						</li>
-						<li class="skills-item">
-							<h3 class="section-name">Technologies</h3>
-							<p class="section-text">
-								Design practice focused on digital experiences. We bring forth a
-								deep passion for problem-solving.
-							</p>
-						</li>
-					</ul>
-				</div>
+				<h2 class="section-title">Skills</h2>
+				<ul>
+					<li>
+						<div class="icon">
+							<svg class="icon">
+								<use href="images/icons.svg#icon-antenna-1-1"></use>
+							</svg>
+						</div>
+						<h3 class="section-name">Strategy</h3>
+						<p class="section-text">
+							Our goal is to identify the business problem to walk away with the
+							perfect and creative solution.
+						</p>
+					</li>
+					<li>
+						<div class="icon">
+							<svg class="icon">
+								<use href="images/icons.svg#icon-clock-1-1"></use>
+							</svg>
+						</div>
+						<h3 class="section-name">Punctuality</h3>
+						<p class="section-text">
+							Bring the key message to the brand's audience for the best price
+							within the shortest possible time.
+						</p>
+					</li>
+					<li>
+						<div class="icon">
+							<svg class="icon">
+								<use href="images/icons.svg#icon-diagram-1-1"></use>
+							</svg>
+						</div>
+						<h3 class="section-name">Diligence</h3>
+						<p class="section-text">
+							Research and confirm brands that present the strongest digital
+							growth opportunities and minimize risk.
+						</p>
+					</li>
+					<li>
+						<div class="icon">
+							<svg class="icon">
+								<use href="images/icons.svg#icon-astronaut-1-1"></use>
+							</svg>
+						</div>
+						<h3 class="section-name">Technologies</h3>
+						<p class="section-text">
+							Design practice focused on digital experiences. We bring forth a
+							deep passion for problem-solving.
+						</p>
+					</li>
+				</ul>
 			</section>
 			<section class="section team">
-				<div class="container">
-					<h2 class="section-title">Our Team</h2>
-					<ul class="team-cards">
-						<li class="team-card">
-							<img
-								src="./images/team1.jpg"
-								width="264"
-								alt="Mark Guerrero Image"
-							/>
-							<div class="person">
-								<h3 class="section-name">Mark Guerrero</h3>
-								<p class="section-text">Product Designer</p>
-							</div>
-						</li>
-						<li class="team-card">
-							<img src="./images/team2.jpg" width="264" alt="Tom Ford Image" />
-							<div class="person">
-								<h3 class="section-name">Tom Ford</h3>
-								<p class="section-text">Frontend Developer</p>
-							</div>
-						</li>
-						<li class="team-card">
-							<img
-								src="./images/team3.jpg"
-								width="264"
-								alt="Camila Garcia Image"
-							/>
-							<div class="person">
-								<h3 class="section-name">Camila Garcia</h3>
-								<p class="section-text">Marketing</p>
-							</div>
-						</li>
-						<li class="team-card">
-							<img
-								src="./images/team4.jpg"
-								width="264"
-								alt="Daniel Wilson Image"
-							/>
-							<div class="person">
-								<h3 class="section-name">Daniel Wilson</h3>
-								<p class="section-text">UI Designer</p>
-							</div>
-						</li>
-					</ul>
-				</div>
+				<h2 class="section-title">Our Team</h2>
+				<ul>
+					<li class="team-card">
+						<img
+							src="./images/team1.jpg"
+							width="264"
+							alt="Mark Guerrero Image"
+						/>
+						<h3 class="section-name">Mark Guerrero</h3>
+						<p class="section-text">Product Designer</p>
+						<div class="icons">
+							<a href="" class="icon">
+								<svg class="icon">
+									<use href="images/icons.svg#icon-instagram-2-1"></use>
+								</svg>
+							</a>
+							<a href="" class="icon">
+								<svg class="icon">
+									<use href="images/icons.svg#icon-twitter-1-1"></use>
+								</svg>
+							</a>
+							<a href="" class="icon">
+								<svg class="icon">
+									<use href="images/icons.svg#icon-facebook-1-1"></use>
+								</svg>
+							</a>
+							<a href="" class="icon">
+								<svg class="icon">
+									<use href="images/icons.svg#icon-linkedin-1-1"></use>
+								</svg>
+							</a>
+						</div>
+					</li>
+					<li class="team-card">
+						<img src="./images/team2.jpg" width="264" alt="Tom Ford Image" />
+						<h3 class="section-name">Tom Ford</h3>
+						<p class="section-text">Frontend Developer</p>
+						<div class="icons">
+							<a href="" class="icon">
+								<svg class="icon">
+									<use href="images/icons.svg#icon-instagram-2-1"></use>
+								</svg>
+							</a>
+							<a href="" class="icon">
+								<svg class="icon">
+									<use href="images/icons.svg#icon-twitter-1-1"></use>
+								</svg>
+							</a>
+							<a href="" class="icon">
+								<svg class="icon">
+									<use href="images/icons.svg#icon-facebook-1-1"></use>
+								</svg>
+							</a>
+							<a href="" class="icon">
+								<svg class="icon">
+									<use href="images/icons.svg#icon-linkedin-1-1"></use>
+								</svg>
+							</a>
+						</div>
+					</li>
+					<li class="team-card">
+						<img
+							src="./images/team3.jpg"
+							width="264"
+							alt="Camila Garcia Image"
+						/>
+						<h3 class="section-name">Camila Garcia</h3>
+						<p class="section-text">Marketing</p>
+						<div class="icons">
+							<a href="" class="icon">
+								<svg class="icon">
+									<use href="images/icons.svg#icon-instagram-2-1"></use>
+								</svg>
+							</a>
+							<a href="" class="icon">
+								<svg class="icon">
+									<use href="images/icons.svg#icon-twitter-1-1"></use>
+								</svg>
+							</a>
+							<a href="" class="icon">
+								<svg class="icon">
+									<use href="images/icons.svg#icon-facebook-1-1"></use>
+								</svg>
+							</a>
+							<a href="" class="icon">
+								<svg class="icon">
+									<use href="images/icons.svg#icon-linkedin-1-1"></use>
+								</svg>
+							</a>
+						</div>
+					</li>
+					<li class="team-card">
+						<img
+							src="./images/team4.jpg"
+							width="264"
+							alt="Daniel Wilson Image"
+						/>
+						<h3 class="section-name">Daniel Wilson</h3>
+						<p class="section-text">UI Designer</p>
+						<div class="icons">
+							<a href="" class="icon">
+								<svg class="icon">
+									<use href="images/icons.svg#icon-instagram-2-1"></use>
+								</svg>
+							</a>
+							<a href="" class="icon">
+								<svg class="icon">
+									<use href="images/icons.svg#icon-twitter-1-1"></use>
+								</svg>
+							</a>
+							<a href="" class="icon">
+								<svg class="icon">
+									<use href="images/icons.svg#icon-facebook-1-1"></use>
+								</svg>
+							</a>
+							<a href="" class="icon">
+								<svg class="icon">
+									<use href="images/icons.svg#icon-linkedin-1-1"></use>
+								</svg>
+							</a>
+						</div>
+					</li>
+				</ul>
 			</section>
 			<section class="section portfolio">
-				<div class="container">
-					<h2 class="section-title">Our Portfolio</h2>
-					<ul class="portfolio-items">
-						<li class="portfolio-item">
+				<h2 class="section-title">Our Portfolio</h2>
+				<ul>
+					<li>
+						<div class="image">
 							<img
 								src="./images/portfolio1.jpg"
 								width="360"
 								height="300"
 								alt="Baking App"
 							/>
-							<div class="app">
-								<h3 class="section-name">Banking App</h3>
-								<p class="section-text">App</p>
+							<div class="cover">
+								<p>
+									14 Stylish and User-Friendly App Design Concepts · Task
+									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+									· Cloud Storage App
+								</p>
 							</div>
-						</li>
-						<li class="portfolio-item">
+						</div>
+						<div class="text">
+							<h3 class="section-name">Banking App</h3>
+							<p class="section-text">App</p>
+						</div>
+					</li>
+					<li>
+						<div class="image">
 							<img
 								src="./images/portfolio2.jpg"
 								width="360"
 								height="300"
 								alt="Cashless Payment"
 							/>
-							<div class="app">
-								<h3 class="section-name">Cashless Payment</h3>
-								<p class="section-text">Marketing</p>
+							<div class="cover">
+								<p>
+									14 Stylish and User-Friendly App Design Concepts · Task
+									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+									· Cloud Storage App
+								</p>
 							</div>
-						</li>
-						<li class="portfolio-item">
+						</div>
+						<div class="text">
+							<h3 class="section-name">Cashless Payment</h3>
+							<p class="section-text">Marketing</p>
+						</div>
+					</li>
+					<li>
+						<div class="image">
 							<img
 								src="./images/portfolio3.jpg"
 								width="360"
 								height="300"
 								alt="Meditation App"
 							/>
-							<div class="app">
-								<h3 class="section-name">Meditation App</h3>
-								<p class="section-text">App</p>
+							<div class="cover">
+								<p>
+									14 Stylish and User-Friendly App Design Concepts · Task
+									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+									· Cloud Storage App
+								</p>
 							</div>
-						</li>
-						<li class="portfolio-item">
+						</div>
+						<div class="text">
+							<h3 class="section-name">Meditation App</h3>
+							<p class="section-text">App</p>
+						</div>
+					</li>
+					<li>
+						<div class="image">
 							<img
 								src="./images/portfolio4.jpg"
 								width="360"
 								height="300"
 								alt="Taxi Service"
 							/>
-							<div class="app">
-								<h3 class="section-name">Taxi Service</h3>
-								<p class="section-text">Marketing</p>
+							<div class="cover">
+								<p>
+									14 Stylish and User-Friendly App Design Concepts · Task
+									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+									· Cloud Storage App
+								</p>
 							</div>
-						</li>
-						<li class="portfolio-item">
+						</div>
+						<div class="text">
+							<h3 class="section-name">Taxi Service</h3>
+							<p class="section-text">Marketing</p>
+						</div>
+					</li>
+					<li>
+						<div class="image">
 							<img
 								src="./images/portfolio5.jpg"
 								width="360"
 								height="300"
 								alt="Screen Illustrations"
 							/>
-							<div class="app">
-								<h3 class="section-name">Screen Illustrations</h3>
-								<p class="section-text">Design</p>
+							<div class="cover">
+								<p>
+									14 Stylish and User-Friendly App Design Concepts · Task
+									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+									· Cloud Storage App
+								</p>
 							</div>
-						</li>
-						<li class="portfolio-item">
+						</div>
+						<div class="text">
+							<h3 class="section-name">Screen Illustrations</h3>
+							<p class="section-text">Design</p>
+						</div>
+					</li>
+					<li>
+						<div class="image">
 							<img
 								src="./images/portfolio6.jpg"
 								width="360"
 								height="300"
 								alt="Online Courses"
 							/>
-							<div class="app">
-								<h3 class="section-name">Online Courses</h3>
-								<p class="section-text">Marketing</p>
+							<div class="cover">
+								<p>
+									14 Stylish and User-Friendly App Design Concepts · Task
+									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+									· Cloud Storage App
+								</p>
 							</div>
-						</li>
-					</ul>
-				</div>
+						</div>
+						<div class="text">
+							<h3 class="section-name">Online Courses</h3>
+							<p class="section-text">Marketing</p>
+						</div>
+					</li>
+				</ul>
 			</section>
 		</main>
 		<footer class="footer">
-			<div class="container">
+			<div class="content">
 				<a class="logo" href="./index.html"
 					>Web<span class="logo-part">Studio</span></a
 				>
@@ -226,6 +370,31 @@
 					Increase the flow of customers and sales for your business with
 					digital marketing & growth solutions.
 				</p>
+			</div>
+			<div class="socials">
+				<p>Social media</p>
+				<div class="icons">
+					<a href="" class="icon">
+						<svg class="icon">
+							<use href="images/icons.svg#icon-instagram-2-1"></use>
+						</svg>
+					</a>
+					<a href="" class="icon">
+						<svg class="icon">
+							<use href="images/icons.svg#icon-twitter-1-1"></use>
+						</svg>
+					</a>
+					<a href="" class="icon">
+						<svg class="icon">
+							<use href="images/icons.svg#icon-facebook-1-1"></use>
+						</svg>
+					</a>
+					<a href="" class="icon">
+						<svg class="icon">
+							<use href="images/icons.svg#icon-linkedin-1-1"></use>
+						</svg>
+					</a>
+				</div>
 			</div>
 		</footer>
 	</body>
