--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					<ul>
 						<li>
 							<div class="icon">
-								<svg class="icon">
+								<svg width="64" height="64" class="icon">
 									<use href="./images/icons.svg#icon-antenna-1-1"></use>
 								</svg>
 							</div>
@@ -73,7 +73,7 @@
 						</li>
 						<li>
 							<div class="icon">
-								<svg class="icon">
+								<svg width="64" height="64" class="icon">
 									<use href="./images/icons.svg#icon-clock-1-1"></use>
 								</svg>
 							</div>
@@ -85,7 +85,7 @@
 						</li>
 						<li>
 							<div class="icon">
-								<svg class="icon">
+								<svg width="64" height="64" class="icon">
 									<use href="./images/icons.svg#icon-diagram-1-1"></use>
 								</svg>
 							</div>
@@ -97,7 +97,7 @@
 						</li>
 						<li>
 							<div class="icon">
-								<svg class="icon">
+								<svg width="64" height="64" class="icon">
 									<use href="./images/icons.svg#icon-astronaut-1-1"></use>
 								</svg>
 							</div>
@@ -111,129 +111,175 @@
 				</div>
 			</section>
 			<section class="section team">
-				<h2 class="section-title">Our Team</h2>
-				<ul>
-					<li class="team-card">
-						<img
-							src="./images/team1.jpg"
-							width="264"
-							alt="Mark Guerrero Image"
-						/>
-						<h3 class="section-name">Mark Guerrero</h3>
-						<p class="section-text">Product Designer</p>
-						<div class="icons">
-							<a href="" class="icon">
-								<svg class="icon">
-									<use href="./images/icons.svg#icon-instagram-2-1"></use>
-								</svg>
-							</a>
-							<a href="" class="icon">
-								<svg class="icon">
-									<use href="./images/icons.svg#icon-twitter-1-1"></use>
-								</svg>
-							</a>
-							<a href="" class="icon">
-								<svg class="icon">
-									<use href="./images/icons.svg#icon-facebook-1-1"></use>
-								</svg>
-							</a>
-							<a href="" class="icon">
-								<svg class="icon">
-									<use href="./images/icons.svg#icon-linkedin-1-1"></use>
-								</svg>
-							</a>
-						</div>
-					</li>
-					<li class="team-card">
-						<img src="./images/team2.jpg" width="264" alt="Tom Ford Image" />
-						<h3 class="section-name">Tom Ford</h3>
-						<p class="section-text">Frontend Developer</p>
-						<div class="icons">
-							<a href="" class="icon">
-								<svg class="icon">
-									<use href="./images/icons.svg#icon-instagram-2-1"></use>
-								</svg>
-							</a>
-							<a href="" class="icon">
-								<svg class="icon">
-									<use href="./images/icons.svg#icon-twitter-1-1"></use>
-								</svg>
-							</a>
-							<a href="" class="icon">
-								<svg class="icon">
-									<use href="./images/icons.svg#icon-facebook-1-1"></use>
-								</svg>
-							</a>
-							<a href="" class="icon">
-								<svg class="icon">
-									<use href="./images/icons.svg#icon-linkedin-1-1"></use>
-								</svg>
-							</a>
-						</div>
-					</li>
-					<li class="team-card">
-						<img
-							src="./images/team3.jpg"
-							width="264"
-							alt="Camila Garcia Image"
-						/>
-						<h3 class="section-name">Camila Garcia</h3>
-						<p class="section-text">Marketing</p>
-						<div class="icons">
-							<a href="" class="icon">
-								<svg class="icon">
-									<use href="./images/icons.svg#icon-instagram-2-1"></use>
-								</svg>
-							</a>
-							<a href="" class="icon">
-								<svg class="icon">
-									<use href="./images/icons.svg#icon-twitter-1-1"></use>
-								</svg>
-							</a>
-							<a href="" class="icon">
-								<svg class="icon">
-									<use href="./images/icons.svg#icon-facebook-1-1"></use>
-								</svg>
-							</a>
-							<a href="" class="icon">
-								<svg class="icon">
-									<use href="./images/icons.svg#icon-linkedin-1-1"></use>
-								</svg>
-							</a>
-						</div>
-					</li>
-					<li class="team-card">
-						<img
-							src="./images/team4.jpg"
-							width="264"
-							alt="Daniel Wilson Image"
-						/>
-						<h3 class="section-name">Daniel Wilson</h3>
-						<p class="section-text">UI Designer</p>
-						<div class="icons">
-							<a href="" class="icon">
-								<svg class="icon">
-									<use href="./images/icons.svg#icon-instagram-2-1"></use>
-								</svg>
-							</a>
-							<a href="" class="icon">
-								<svg class="icon">
-									<use href="./images/icons.svg#icon-twitter-1-1"></use>
-								</svg>
-							</a>
-							<a href="" class="icon">
-								<svg class="icon">
-									<use href="./images/icons.svg#icon-facebook-1-1"></use>
-								</svg>
-							</a>
-							<a href="" class="icon">
-								<svg class="icon">
-									<use href="./images/icons.svg#icon-linkedin-1-1"></use>
-								</svg>
-							</a>
-						</div>
-					</li>
-				</ul>
+				<div class="container">
+					<h2 class="section-title">Our Team</h2>
+					<ul>
+						<li class="team-card">
+							<div class="img">
+								<img
+									src="./images/team1.jpg"
+									width="264"
+									alt="Mark Guerrero Image"
+								/>
+							</div>
+							<h3 class="section-name">Mark Guerrero</h3>
+							<p class="section-text">Product Designer</p>
+							<ul class="icons">
+								<li>
+									<a href="" class="icon">
+										<svg width="16" height="16" class="icon">
+											<use href="./images/icons.svg#icon-instagram-2-1"></use>
+										</svg>
+									</a>
+								</li>
+								<li>
+									<a href="" class="icon">
+										<svg width="16" height="16" class="icon">
+											<use href="./images/icons.svg#icon-twitter-1-1"></use>
+										</svg>
+									</a>
+								</li>
+								<li>
+									<a href="" class="icon">
+										<svg width="16" height="16" class="icon">
+											<use href="./images/icons.svg#icon-facebook-1-1"></use>
+										</svg>
+									</a>
+								</li>
+								<li>
+									<a href="" class="icon">
+										<svg width="16" height="16" class="icon">
+											<use href="./images/icons.svg#icon-linkedin-1-1"></use>
+										</svg>
+									</a>
+								</li>
+							</ul>
+						</li>
+						<li class="team-card">
+							<div class="img">
+								<img
+									src="./images/team2.jpg"
+									width="264"
+									alt="Tom Ford Image"
+								/>
+							</div>
+							<h3 class="section-name">Tom Ford</h3>
+							<p class="section-text">Frontend Developer</p>
+							<ul class="icons">
+								<li>
+									<a href="" class="icon">
+										<svg width="16" height="16" class="icon">
+											<use href="./images/icons.svg#icon-instagram-2-1"></use>
+										</svg>
+									</a>
+								</li>
+								<li>
+									<a href="" class="icon">
+										<svg width="16" height="16" class="icon">
+											<use href="./images/icons.svg#icon-twitter-1-1"></use>
+										</svg>
+									</a>
+								</li>
+								<li>
+									<a href="" class="icon">
+										<svg width="16" height="16" class="icon">
+											<use href="./images/icons.svg#icon-facebook-1-1"></use>
+										</svg>
+									</a>
+								</li>
+								<li>
+									<a href="" class="icon">
+										<svg width="16" height="16" class="icon">
+											<use href="./images/icons.svg#icon-linkedin-1-1"></use>
+										</svg>
+									</a>
+								</li>
+							</ul>
+						</li>
+						<li class="team-card">
+							<div class="img">
+								<img
+									src="./images/team3.jpg"
+									width="264"
+									alt="Camila Garcia Image"
+								/>
+							</div>
+							<h3 class="section-name">Camila Garcia</h3>
+							<p class="section-text">Marketing</p>
+							<ul class="icons">
+								<li>
+									<a href="" class="icon">
+										<svg width="16" height="16" class="icon">
+											<use href="./images/icons.svg#icon-instagram-2-1"></use>
+										</svg>
+									</a>
+								</li>
+								<li>
+									<a href="" class="icon">
+										<svg width="16" height="16" class="icon">
+											<use href="./images/icons.svg#icon-twitter-1-1"></use>
+										</svg>
+									</a>
+								</li>
+								<li>
+									<a href="" class="icon">
+										<svg width="16" height="16" class="icon">
+											<use href="./images/icons.svg#icon-facebook-1-1"></use>
+										</svg>
+									</a>
+								</li>
+								<li>
+									<a href="" class="icon">
+										<svg width="16" height="16" class="icon">
+											<use href="./images/icons.svg#icon-linkedin-1-1"></use>
+										</svg>
+									</a>
+								</li>
+							</ul>
+						</li>
+						<li class="team-card">
+							<div class="img">
+								<img
+									src="./images/team4.jpg"
+									width="264"
+									alt="Daniel Wilson Image"
+								/>
+							</div>
+							<h3 class="section-name">Daniel Wilson</h3>
+							<p class="section-text">UI Designer</p>
+							<ul class="icons">
+								<li>
+									<a href="" class="icon">
+										<svg width="16" height="16" class="icon">
+											<use href="./images/icons.svg#icon-instagram-2-1"></use>
+										</svg>
+									</a>
+								</li>
+								<li>
+									<a href="" class="icon">
+										<svg width="16" height="16" class="icon">
+											<use href="./images/icons.svg#icon-twitter-1-1"></use>
+										</svg>
+									</a>
+								</li>
+								<li>
+									<a href="" class="icon">
+										<svg width="16" height="16" class="icon">
+											<use href="./images/icons.svg#icon-facebook-1-1"></use>
+										</svg>
+									</a>
+								</li>
+								<li>
+									<a href="" class="icon">
+										<svg width="16" height="16" class="icon">
+											<use href="./images/icons.svg#icon-linkedin-1-1"></use>
+										</svg>
+									</a>
+								</li>
+							</ul>
+						</li>
+					</ul>
+				</div>
 			</section>
 			<section class="section portfolio">
 				<h2 class="section-title">Our Portfolio</h2>
@@ -368,38 +414,48 @@
 			</section>
 		</main>
 		<footer class="footer">
-			<div class="content">
-				<a class="logo" href="./index.html"
-					>Web<span class="logo-part">Studio</span></a
-				>
-				<p class="footer-text">
-					Increase the flow of customers and sales for your business with
-					digital marketing & growth solutions.
-				</p>
-			</div>
-			<div class="socials">
-				<p>Social media</p>
-				<div class="icons">
-					<a href="" class="icon">
-						<svg class="icon">
-							<use href="./images/icons.svg#icon-instagram-2-1"></use>
-						</svg>
-					</a>
-					<a href="" class="icon">
-						<svg class="icon">
-							<use href="./images/icons.svg#icon-twitter-1-1"></use>
-						</svg>
-					</a>
-					<a href="" class="icon">
-						<svg class="icon">
-							<use href="./images/icons.svg#icon-facebook-1-1"></use>
-						</svg>
-					</a>
-					<a href="" class="icon">
-						<svg class="icon">
-							<use href="./images/icons.svg#icon-linkedin-1-1"></use>
-						</svg>
-					</a>
+			<div class="container">
+				<div class="content">
+					<a class="logo" href="./index.html"
+						>Web<span class="logo-part">Studio</span></a
+					>
+					<p class="footer-text">
+						Increase the flow of customers and sales for your business with
+						digital marketing & growth solutions.
+					</p>
+				</div>
+				<div class="socials">
+					<p>Social media</p>
+					<ul class="icons">
+						<li>
+							<a href="" class="icon">
+								<svg width="24" height="24" class="icon">
+									<use href="./images/icons.svg#icon-instagram-2-1"></use>
+								</svg>
+							</a>
+						</li>
+						<li>
+							<a href="" class="icon">
+								<svg width="24" height="24" class="icon">
+									<use href="./images/icons.svg#icon-twitter-1-1"></use>
+								</svg>
+							</a>
+						</li>
+						<li>
+							<a href="" class="icon">
+								<svg width="24" height="24" class="icon">
+									<use href="./images/icons.svg#icon-facebook-1-1"></use>
+								</svg>
+							</a>
+						</li>
+						<li>
+							<a href="" class="icon">
+								<svg width="24" height="24" class="icon">
+									<use href="./images/icons.svg#icon-linkedin-1-1"></use>
+								</svg>
+							</a>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</footer>
