--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Homework - 3</title>
+		<title>Homework - 4</title>
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
@@ -122,31 +122,33 @@
 									alt="Mark Guerrero Image"
 								/>
 							</div>
-							<h3 class="section-name">Mark Guerrero</h3>
-							<p class="section-text">Product Designer</p>
+							<div class="text">
+								<h3 class="section-name">Mark Guerrero</h3>
+								<p class="section-text">Product Designer</p>
+							</div>
 							<ul class="icons">
-								<li>
+								<li class="icon-element">
 									<a href="" class="icon">
 										<svg width="16" height="16" class="icon">
 											<use href="./images/icons.svg#icon-instagram-2-1"></use>
 										</svg>
 									</a>
 								</li>
-								<li>
+								<li class="icon-element">
 									<a href="" class="icon">
 										<svg width="16" height="16" class="icon">
 											<use href="./images/icons.svg#icon-twitter-1-1"></use>
 										</svg>
 									</a>
 								</li>
-								<li>
+								<li class="icon-element">
 									<a href="" class="icon">
 										<svg width="16" height="16" class="icon">
 											<use href="./images/icons.svg#icon-facebook-1-1"></use>
 										</svg>
 									</a>
 								</li>
-								<li>
+								<li class="icon-element">
 									<a href="" class="icon">
 										<svg width="16" height="16" class="icon">
 											<use href="./images/icons.svg#icon-linkedin-1-1"></use>
@@ -425,30 +427,30 @@
 					</p>
 				</div>
 				<div class="socials">
-					<p>Social media</p>
+					<p class="socials-text">Social media</p>
 					<ul class="icons">
-						<li>
+						<li class="icon-element">
 							<a href="" class="icon">
 								<svg width="24" height="24" class="icon">
 									<use href="./images/icons.svg#icon-instagram-2-1"></use>
 								</svg>
 							</a>
 						</li>
-						<li>
+						<li class="icon-element">
 							<a href="" class="icon">
 								<svg width="24" height="24" class="icon">
 									<use href="./images/icons.svg#icon-twitter-1-1"></use>
 								</svg>
 							</a>
 						</li>
-						<li>
+						<li class="icon-element">
 							<a href="" class="icon">
 								<svg width="24" height="24" class="icon">
 									<use href="./images/icons.svg#icon-facebook-1-1"></use>
 								</svg>
 							</a>
 						</li>
-						<li>
+						<li class="icon-element">
 							<a href="" class="icon">
 								<svg width="24" height="24" class="icon">
 									<use href="./images/icons.svg#icon-linkedin-1-1"></use>
