--- a/index.html
+++ b/index.html
@@ -457,5 +457,55 @@
 				</div>
 			</div>
 		</footer>
+		<div class="modal-overlay">
+			<div class="modal">
+				<button type="button" class="close">
+					<svg width="8" height="8" class="close-icon">
+						<use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
+					</svg>
+				</button>
+				<fieldset class="form-group">
+					<legend class="group-title">
+						Leave your contacts and we will call you back
+					</legend>
+					<label class="form-label" for="name">
+						Name
+						<div class="input-container">
+							<input type="text" class="form-input" placeholder="" name="name" id="name" required />
+							<svg width="18" height="24" class="icon">
+								<use href="./images/icons.svg#icon-person-black-18dp-1"></use>
+							</svg>
+						</div>
+					</label>
+					<label class="form-label" for="phone">
+						Phone
+						<div class="input-container">
+							<input type="phone" class="form-input" placeholder="" name="phone" id="phone" required />
+							<svg width="18" height="24" class="icon">
+								<use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
+							</svg>
+						</div>
+					</label>
+					<label class="form-label" for="phone">
+						Email
+						<div class="input-container">
+							<input type="email" class="form-input" placeholder="" name="email" id="email" required />
+							<svg width="18" height="24" class="icon">
+								<use href="./images/icons.svg#icon-email-black-18dp-1"></use>
+							</svg>
+						</div>
+					</label>
+					<label class="form-label" for="phone">
+						Comment
+						<textarea class="form-input" placeholder="Text input" name="comment" id="comment" rows="5" required></textarea>
+					</label>
+					<label class="form-label terms" for="terms">
+						<input type="checkbox" class="form-input" placeholder="" name="terms" id="terms" required />
+						I accept the terms and conditions of the <a href="">Privacy Policy</a>
+					</label>
+				</fieldset>
+				<button type="submit">Send</button>
+			</div>
+		</div>
 	</body>
 </html>
