--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Homework - 5</title>
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
 			integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
 			crossorigin="anonymous"
-			referrerpolicy="no-referrer"
-		/>
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+			referrerpolicy="no-referrer">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link
 			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
-			rel="stylesheet"
-		/>
-		<link rel="stylesheet" href="css/styles.css" />
+			rel="stylesheet">
+		<link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>
 		<header class="header">
@@ -455,69 +453,83 @@
 						</li>
 					</ul>
 				</div>
+				<div class="subscribe">
+					<p class="subscribe-text">Subscribe</p>
+					<form method="post" enctype="multipart/form-data">
+						<label for="email" class="form-label">
+							<input type="email" id="email" name="email" placeholder="E-mail" class="email">
+						</label>
+						<button class="submit" type="submit">
+							Subscribe
+							<svg width="24" height="24" class="icon">
+								<use href="./images/icons.svg#icon-icon-send"></use>
+							</svg>
+						</button>
+					</form>
+				</div>
 			</div>
 		</footer>
 		<div class="modal-overlay">
 			<div class="modal">
-				<form action="" method="post" enctype="multipart/form-data">
-					<button type="button" class="close">
-						<svg width="8" height="8" class="close-icon">
-							<use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
-						</svg>
-					</button>
-					<fieldset class="form-group">
-						<legend class="group-title">
+				<button type="button" class="close">
+					<svg width="8" height="8" class="close-icon">
+						<use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
+					</svg>
+				</button>
+				<form method="post" enctype="multipart/form-data">
+					<div class="form-group">
+						<p class="group-title">
 							Leave your contacts and we will call you back
-						</legend>
-						<label class="form-label" for="name">
+						</p>
+						<label class="form-label" for="user-name">
 							Name
-							<div class="input-container">
-								<input
-									type="text"
-									class="form-input"
-									placeholder=""
-									name="name"
-									id="name"
-									autofocus
-									required
-								/>
-								<svg width="18" height="24" class="icon">
-									<use href="./images/icons.svg#icon-person-black-18dp-1"></use>
-								</svg>
-							</div>
 						</label>
+						<div class="input-container">
+							<input
+								type="text"
+								class="form-input"
+								placeholder=""
+								name="user-name"
+								id="user-name"
+								autofocus
+								required
+							/>
+							<svg width="18" height="24" class="icon">
+								<use href="./images/icons.svg#icon-person-black-18dp-1"></use>
+							</svg>
+						</div>
 						<label class="form-label" for="phone">
 							Phone
-							<div class="input-container">
-								<input
-									type="phone"
-									class="form-input"
-									placeholder=""
-									name="phone"
-									id="phone"
-									required
-								/>
-								<svg width="18" height="24" class="icon">
-									<use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
-								</svg>
-							</div>
 						</label>
+						<div class="input-container">
+							<input
+								type="phone"
+								class="form-input"
+								placeholder=""
+								name="phone"
+								id="phone"
+								required
+							/>
+							<svg width="18" height="24" class="icon">
+								<use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
+							</svg>
+						</div>
 						<label class="form-label" for="phone">
 							Email
-							<div class="input-container">
-								<input
-									type="email"
-									class="form-input"
-									placeholder=""
-									name="email"
-									id="email"
-									required
-								/>
-								<svg width="18" height="24" class="icon">
-									<use href="./images/icons.svg#icon-email-black-18dp-1"></use>
-								</svg>
-							</div>
 						</label>
+						<div class="input-container">
+							<input
+								type="email"
+								class="form-input"
+								placeholder=""
+								name="email"
+								id="email"
+								required
+							/>
+							<svg width="18" height="24" class="icon">
+								<use href="./images/icons.svg#icon-email-black-18dp-1"></use>
+							</svg>
+						</div>
 						<label class="form-label" for="phone">
 							Comment
 							<textarea
@@ -529,23 +541,23 @@
 								required
 							></textarea>
 						</label>
+						<div class="checkbox-container">
+							<input
+								type="checkbox"
+								class="form-input"
+								name="terms"
+								id="terms"
+								required
+							/>
+							<svg width="10" height="8" class="icon">
+								<use href="./images/icons.svg#icon-Vector-1"></use>
+							</svg>
+						</div>
 						<label class="form-label terms" for="terms">
-							<div class="checkbox-container">
-								<input
-									type="checkbox"
-									class="form-input"
-									name="terms"
-									id="terms"
-									required
-								/>
-								<svg width="10" height="8" class="icon">
-									<use href="./images/icons.svg#icon-Vector-1"></use>
-								</svg>
-							</div>
 							I accept the terms and conditions of the
 							<a href="">Privacy Policy</a>
 						</label>
-					</fieldset>
+					</div>
 					<button type="submit">Send</button>
 				</form>
 			</div>
